# bd_datasets_002

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.build  Dockerfile.python  IMPLEMENTATION_SUMMARY.md  README.md  REQUIREMENTS_VERIFICATION.md  buildspec.yml  docker-compose.yml  evaluation.txt  guide.tsx.txt  implmentation.plan  last_test_error.txt  package-lock.json  package.json  report.json  requirements.txt  run-tests.sh  test
013b8i-analytical-closest-point-of-approach-cpa-in-3d-space/: Dockerfile  README.md
05wxov-comprehensive-pytest-suite-for-calculate-discount/: .gitignore  Dockerfile  README.md  docker-compose.yml
0ajc1z-techvision-pro-responsive-design/: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
0dqub1-django-blog-api-n-1-query-performance-fix/: .gitignore  EVALUATION_PROMPT_FRAMEWORK.md  README.md  SOLUTION_PROMPT_FRAMEWORK.md  TESTING_PROMPT_FRAMEWORK.md  TRAJECTORY_PROMPT_FRAMEWORK.md  requirements.txt
0dvstl-high-fidelity-ledger-testing/: README.md  docker-compose.yml
0kbabs-deterministic-concurrent-text-pdf-analytics-engine/: .gitignore  Dockerfile  README.md  doc.go  docker-compose.yml  go.mod
0s76fg-java-spring-boot-rest-api-for-inventory-management/: .gitignore  Dockerfile  README.md  docker-compose.yml
0sexu2-advancedpdfbufferorchestrator/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
0tychg-distributed-lock-manager-demo-with-vue-3-and-fastapi/: README.md
0u26j2-discountresolutionengine/: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod
10raof-go-payment-gateway-client-test-suite/: .gitignore  Dockerfile  README.md  go.mod
11yv40-destination-dispatch-elevator-system/: .gitignore  Dockerfile  README.md  docker-compose.yml
13dju2-implement-high-performance-click-streak-counter-in-react/: README.md
18yefb-optimize-transaction-logging-with-compression-and-pq/: .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
1ap159-multi-file-upload-chat-application/: .dockerignore  .gitignore  Dockerfile  Dockerfile.after  Dockerfile.app  Dockerfile.before  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json
1gapw4-writing-analytics-dashboard/: .gitignore  README.md  (+1 more)
2php38-task-queue-worker-nodes/repository_after/: __init__.py  alerting.py  api.py  cli.py  client.py  dependencies.py  logging_config.py  metrics.py  models.py  multiprocess_worker.py  priority_queue.py  prometheus_metrics.py  pyproject.toml  redis_backend.py  retry.py  scheduler.py  serialization.py  worker.py
sr2ome-connection-pool/repository_after/: pyproject.toml
sr2ome-connection-pool/repository_after/connection_pool/: __init__.py  core.py
ud7d4k-adversarial-ci-stable-test-suite-for-power-transformer-structural-scaling/repository_after/power_transformer_project/: pyproject.toml
ud7d4k-adversarial-ci-stable-test-suite-for-power-transformer-structural-scaling/repository_after/power_transformer_project/src/structural_scaling/: __init__.py  diagnostics.py  power_transform.py
(+7478 files in other folders)
